// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpandBoard /> with <ExpandBoard.Button> and <ExpandBoard.Content> by default matches with snapshot 1`] = `
<div
  data-radium={true}
  style={Object {}}
>
  <button
    aria-controls="k-ExpandBoard"
    aria-expanded={false}
    className="k-Button k-Button--helium k-Button--big k-Button--icon k-Button--iconRight"
    data-radium={true}
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "lineHeight": "1.3rem",
        "padding": "1.38rem 1.88rem",
        "width": "100%",
      }
    }
    tabIndex={null}
    type="button"
  >
    <div
      data-radium={true}
    >
      Alice
      <svg
        className=""
        data-radium={true}
        fill="#fff"
        height="5.64"
        style={
          Object {
            "height": "0.75rem",
            "marginLeft": "0.63rem",
            "transform": "rotate(180deg)",
            "width": "0.5rem",
          }
        }
        viewBox="0 0 8.48 5.64"
        width="8.48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`<ExpandBoard /> with <ExpandBoard.Button> and <ExpandBoard.Content> disabled matches with snapshot 1`] = `
<div
  data-radium={true}
  style={Object {}}
>
  <button
    aria-controls="k-ExpandBoard"
    aria-expanded={false}
    className="k-Button k-Button--helium k-Button--big k-Button--icon k-Button--iconRight"
    data-radium={true}
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "lineHeight": "1.3rem",
        "padding": "1.38rem 1.88rem",
        "width": "100%",
      }
    }
    tabIndex={null}
    type="button"
  >
    <div
      data-radium={true}
    >
      Alice
      <svg
        className=""
        data-radium={true}
        fill="#fff"
        height="5.64"
        style={
          Object {
            "height": "0.75rem",
            "marginLeft": "0.63rem",
            "transform": "rotate(180deg)",
            "width": "0.5rem",
          }
        }
        viewBox="0 0 8.48 5.64"
        width="8.48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`<ExpandBoard /> with random content matches with snapshot 1`] = `
<div
  data-radium={true}
  style={Object {}}
/>
`;
